# hidden-payment-channels

./: README.md  TRY_IT.md  requirements.md
contracts/: README.md  hardhat.config.ts  package.json
contracts/contracts/: HiddenPaymentChannels.sol  HiddenPayments.sol
contracts/ignition/deployments/chain-11155111/: deployed_addresses.json  journal.jsonl
contracts/ignition/deployments/chain-11155111/artifacts/: HiddenPaymentChannelsModule#HiddenPaymentChannels.json  HiddenPaymentsModule#HiddenPayments.json
contracts/ignition/deployments/chain-11155111/build-info/: solc-0_8_28-2fd48df70b9d206dc2d07b3cb08c09d03890a268.json  solc-0_8_28-8d4a8ba07c4943c13f6fdec56a20b632f77f9747.json
contracts/ignition/modules/: HiddenPaymentChannels.ts  HiddenPayments.ts
demo/: README.md  env.json  wallets.json
demo-data/: README.md
docs/grants/: gg24.md
examples/tor-provider/: .gitignore  Cargo.toml  README.md
examples/tor-provider/src/: config.rs  hidden_service.rs  hpc_service.rs  lib.rs  nimbus.rs  payment_middleware.rs  proxy_local_client.rs  proxy_tor_client.rs  rpc_utils.rs  server_host.rs  server_user.rs  tor.rs
service/: .gitignore  README.md  package.json
service/src/: actions.ts  artifact-store.ts  balances.ts  contract.ts  db.ts  engine.ts  env.ts  index.ts  prover.ts  provider.ts  routes.ts  types.d.ts  utils.ts  wallet.ts
service/src/cookbook/: claim-ticket.step.ts  top-up.recipe.ts  top-up.step.ts
